--- a/12-2/comp.tex
+++ b/12-2/comp.tex
@@ -79,7 +79,18 @@
     \end{figure}
     
 \section{Methodology}
-
+    For this AI-Chinese chess project, i propose to Machine learning, specifically Reinforcment learning and the Monte Carlo Tree search algorithm. In addition, This project will be hosted online using HTML.
+    
+\subsection{Language}
+\subsection{obtain Data}
+\subsection{Pre-process Data}
+\subsection{Input data}
+\subsection{Built-in GUI}
+\subsection{Self-Play}
+\subsection{Training}
+\subsection{Evaluator}
+\subsection{Supervised Learning}
+\subsection{Website }
 \section{Evaluation}
     To Evaluate the success of this project, i plan to to evaluate it using the following three methods: invitation to XiangQi players to compete with the model and provide feed back. Feed the model data from after training period and compare the outputted winning rate against other published AI-chinses chess models to see if the way i train the model succeeded or not. Post the game with the model on a website and invite people around the world to test the training function, if the feed back came back positive, then that means the training purpose is achieved. 
     Based on the players feed back, we can optimize the model in the following feedback to best assist players to train and challenge themselves. 
